# agent-security-scanner

./: README.md  pyproject.toml
src/agent_scanner/: __init__.py  baseline.py  cli.py  config.py
src/agent_scanner/adapters/: __init__.py  langchain.py
src/agent_scanner/core/: __init__.py  findings.py  parser.py  scanner.py  taint.py
src/agent_scanner/output/: __init__.py  console.py  html.py  json_output.py  sarif.py
src/agent_scanner/rules/: __init__.py  base.py  permissions.py  prompt_injection.py  registry.py  sandbox.py  tool_validation.py
src/agent_scanner/rules/owasp/: __init__.py  llm01_prompt_injection.py  llm02_insecure_output.py  llm03_training_data.py  llm04_dos.py  llm05_supply_chain.py  llm06_disclosure.py  llm07_insecure_plugin.py  llm08_excessive_agency.py  llm09_overreliance.py  llm10_model_theft.py
src/agent_scanner/rules/secrets/: __init__.py  api_keys.py  credentials.py
tests/: __init__.py  test_rules.py
tests/fixtures/: safe_agent.py  vulnerable_agent.py
